kubernetes/workshop-template-system/base/workshops-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: healthcare-ml-workshop
  namespace: workshop-system
  labels:
    app: healthcare-ml-workshop
    workshop: healthcare-ml
spec:
  host: healthcare-ml-workshop-workshop-system.apps.cluster-9cfzr.9cfzr.sandbox180.opentlc.com
  to:
    kind: Service
    name: healthcare-ml-workshop
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-baremetal-workshop
  namespace: workshop-system
  labels:
    app: openshift-baremetal-workshop
    workshop: openshift-baremetal
spec:
  host: openshift-baremetal-workshop-workshop-system.apps.cluster-9cfzr.9cfzr.sandbox180.opentlc.com
  to:
    kind: Service
    name: openshift-baremetal-workshop
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
